[package]
name = "mundis-ledger"
version = "0.9.29"
authors = ["Mundis Maintainers <maintainers@mundis.io>"]
repository = "https://github.com/mundisnetwork/axis"
license = "Apache-2.0"
homepage = "https://mundis.io/"
edition = "2021"

[dependencies]
bincode = "1.3.3"
byteorder = "1.4.3"
chrono = { version = "0.4.11", features = ["serde"] }
chrono-humanize = "0.2.1"
crossbeam-channel = "0.5"
fs_extra = "1.2.0"
futures = "0.3.17"
itertools = "0.10.1"
lazy_static = "1.4.0"
libc = "0.2.108"
log = { version = "0.4.14" }
num_enum = "0.5.4"
num_cpus = "1.13.0"
prost = "0.10.0"
rand = "0.7.0"
rand_chacha = "0.2.2"
rayon = "1.5.1"
serde = "1.0.130"
serde_bytes = "0.11.5"
sha2 = "0.9.8"
mundis-entry = { path = "../entry", version = "=0.9.29" }
mundis-frozen-abi = { path = "../frozen-abi", version = "=0.9.29" }
mundis-frozen-abi-macro = { path = "../frozen-abi/macro", version = "=0.9.29" }
mundis-transaction-status = { path = "../transaction-status", version = "=0.9.29" }
mundis-logger = { path = "../logger", version = "=0.9.29" }
mundis-measure = { path = "../measure", version = "=0.9.29" }
mundis-metrics = { path = "../metrics", version = "=0.9.29" }
mundis-perf = { path = "../perf", version = "=0.9.29" }
mundis-program-runtime = { path = "../program-runtime", version = "=0.9.29" }
mundis-rayon-threadlimit = { path = "../rayon-threadlimit", version = "=0.9.29" }
mundis-runtime = { path = "../runtime", version = "=0.9.29" }
mundis-sdk = { path = "../sdk", version = "=0.9.29" }
mundis-storage-bigtable = { path = "../storage-bigtable", version = "=0.9.29" }
mundis-storage-proto = { path = "../storage-proto", version = "=0.9.29" }
mundis-vote-program = { path = "../programs/vote", version = "=0.9.29" }
tempfile = "3.2.0"
thiserror = "1.0"
tokio = { version = "~1.14.1", features = ["full"] }
tokio-stream = "0.1"
trees = "0.4.2"
reed-solomon-erasure = { version = "5.0.1", features = ["simd-accel"] }

[dependencies.rocksdb]
# Avoid the vendored bzip2 within rocksdb-sys that can cause linker conflicts
# when also using the bzip2 crate
version = "0.17.0"
default-features = false
features = ["lz4"]

[dev-dependencies]
assert_matches = "1.5.0"
matches = "0.1.9"
mundis-account-decoder = { path = "../account-decoder", version = "=0.9.29" }

[build-dependencies]
rustc_version = "0.4"

[lib]
crate-type = ["lib"]
name = "mundis_ledger"

[[bench]]
name = "sigverify_shreds"

[[bench]]
name = "blockstore"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
