[package]
name = "mundis-logger"
version = "1.9.19"
authors = ["Mundis Maintainers <maintainers@mundis.io>"]
repository = "https://github.com/mundisnetwork/axis"
license = "Apache-2.0"
homepage = "https://mundis.io/"
edition = "2021"

[dependencies]
env_logger = "0.9.0"
lazy_static = "1.4.0"
log = "0.4.14"

[lib]
name = "mundis_logger"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
