[package]
name = "mundis-measure"
version = "1.9.18"
homepage = "https://mundis.io/"
repository = "https://github.com/mundisnetwork/axis"
authors = ["Mundis Maintainers <maintainers@mundis.io>"]
license = "Apache-2.0"
edition = "2021"

[dependencies]
log = "0.4.14"
mundis-sdk = { path = "../sdk", version = "=1.9.18" }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
