[package]
name = "mundis-metrics"
version = "0.9.24"
authors = ["Mundis Maintainers <maintainers@mundis.io>"]
repository = "https://github.com/mundisnetwork/axis"
license = "Apache-2.0"
homepage = "https://mundis.io/"
edition = "2021"

[dependencies]
env_logger = "0.9.0"
gethostname = "0.2.1"
lazy_static = "1.4.0"
log = "0.4.14"
reqwest = { version = "0.11.6", default-features = false, features = ["blocking", "rustls-tls", "json"] }
mundis-sdk = { path = "../sdk", version = "=0.9.24" }

[dev-dependencies]
rand = "0.7.0"
serial_test = "0.5.1"

[lib]
name = "mundis_metrics"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
