[package]
name = "mundis-net-utils"
version = "0.9.26"
authors = ["Mundis Maintainers <maintainers@mundis.io>"]
repository = "https://github.com/mundisnetwork/axis"
license = "Apache-2.0"
homepage = "https://mundis.io/"
edition = "2021"

[dependencies]
bincode = "1.3.3"
clap = "2.33.1"
log = "0.4.14"
nix = "0.23.0"
rand = "0.7.0"
serde = "1.0.130"
serde_derive = "1.0.103"
socket2 = "0.4.2"
mundis-logger = { path = "../logger", version = "=0.9.26" }
mundis-sdk = { path = "../sdk", version = "=0.9.26" }
mundis-version = { path = "../version", version = "=0.9.26" }
tokio = { version = "~1.14.1", features = ["full"] }
url = "2.2.2"

[lib]
name = "mundis_net_utils"

[[bin]]
name = "mundis-ip-address"
path = "src/bin/ip_address.rs"

[[bin]]
name = "mundis-ip-address-server"
path = "src/bin/ip_address_server.rs"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
